# piedgeai

./: .gitignore  README.md  pyproject.toml
configs/: models.example.json
docs/: benchmarking.md  runtime_design.md
piedgeai/: __init__.py  config.py  model_manager.py  monitoring.py  router.py  server.py  sessions.py
scripts/: curl_examples.sh  python_client.py
tests/: test_config.py  test_model_manager.py  test_router.py  test_sessions.py
